--- a/examples/Cpp/CMakeLists.txt
+++ b/examples/Cpp/CMakeLists.txt
@@ -39,3 +39,4 @@ EXAMPLE_CPP(TrimMeshBasedOnPointCloud ${CMAKE_PROJECT_NAME})
 EXAMPLE_CPP(ViewDistances             ${CMAKE_PROJECT_NAME})
 EXAMPLE_CPP(ViewPCDMatch              ${CMAKE_PROJECT_NAME})
 EXAMPLE_CPP(Visualizer                ${CMAKE_PROJECT_NAME})
+EXAMPLE_CPP(Semantic3d                ${CMAKE_PROJECT_NAME})
