re-enable all unit tests

--- a/src/UnitTest/CMakeLists.txt
+++ b/src/UnitTest/CMakeLists.txt
@@ -7,8 +7,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 include_directories(".")
 
-file(GLOB_RECURSE UNIT_TESTS "Core/Geometry/*.cpp" "Utility/*.cpp" "main.cpp")
-# file(GLOB_RECURSE UNIT_TESTS "*.cpp")
+file(GLOB_RECURSE UNIT_TESTS "*.cpp")
 add_executable(unitTests ${UNIT_TESTS})
 add_definitions(-DTEST_DATA_DIR="${PROJECT_SOURCE_DIR}/examples/TestData")
 
