flexible globbbing _open3d_internal

--- a/src/Python/CMakeLists.txt
+++ b/src/Python/CMakeLists.txt
@@ -69,6 +69,7 @@ add_custom_target(python-package
             -DPYTHON_PACKAGE_DST_DIR=${PYTHON_PACKAGE_DST_DIR}
             -DPYTHON_VERSION=${PYTHON_VERSION}
             -DPYTHON_COMPILED_MODULE_PATH=$<TARGET_FILE:${PACKAGE_NAME}>
+            -DPACKAGE_NAME=${PACKAGE_NAME}
             -DENABLE_JUPYTER=${ENABLE_JUPYTER}
             -DPROJECT_EMAIL=${PROJECT_EMAIL}
             -DPROJECT_HOME=${PROJECT_HOME}
